Start Coding Example Program

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,11 @@ logs
 PAWthorne-server
 
 # VS-Code Editor Files
-.vscode**
+**.vscode
 
 # Generated Certificates and Keys
 **.key
 **.crt
 
+# Pesky Node Stuffs
+**node_modules
