--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
 language: go
 os: linux
 arch: amd64
-dist: precise
+dist: trusty
 git:
   strategy: clone
   depth: 1
   quiet: true
 
+services:
+- redis-server
+
+before_install:
+- nvm install node
+- gimme stable
+- sudo apt-get update
+- sudo apt-get -y install libzmq3-dev
+
+
 install:
+- go env CGO_ENABLED
 - cd node-layer
 - npm install
 - cd ..
