--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 install:
 - go env CGO_ENABLED
 - cd node-layer
+- npm install zeromq@5 --zmq-external
 - npm install
 - cd ..
 - openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes -out tlscert.crt -keyout tlskey.key
