--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: go
 os: linux
 arch: amd64
 dist: trusty
+sudo: required
 git:
   strategy: clone
   depth: 1
@@ -14,12 +15,12 @@ before_install:
 - nvm install node
 - gimme stable
 - sudo apt-get -y install libzmq3-dev
+- sudo apt-get -y upgrade build-essential
 
 
 install:
 - go env CGO_ENABLED
 - cd node-layer
-- npm install zeromq@5 --zmq-external
 - npm install
 - cd ..
 - openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes -out tlscert.crt -keyout tlskey.key
