--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ before_install:
 - nvm install node
 - gimme stable
 - sudo apt-get -y install libzmq3-dev
-- sudo apt-get -y upgrade g++
-- sudo apt-get -y upgrade gcc
-- sudo apt-get -y upgrade libc6-dev
+- sudo apt-get -y install build-essentials
 
 
 install:
