--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 install:
 - go env CGO_ENABLED
 - cd node-layer
-- npm install
+- npm clean-install
 - cd ..
 - openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes -out tlscert.crt -keyout tlskey.key -subj "/C=US/ST=California/L=Los Angeles/O=Laplace Game Development/CN=www.example.com"
 
